// Copyright (c) Sony Pictures Imageworks, et al.
// SPDX-License-Identifier: Apache-2.0
// https://github.com/imageworks/spk
syntax = "proto3";

package spfs;

message Digest {
    bytes bytes = 1;
}

message DateTime {
    string iso_timestamp = 1;
}

message Object {
    oneof kind {
        Platform platform = 1;
        Layer layer = 2;
        Manifest manifest = 3;
        Tree tree = 4 [deprecated = true];
        Blob blob = 5;
        bool mask = 6 [deprecated = true];
    }
}

message Platform {
    repeated Digest stack = 1;
}

message Layer {
    Digest manifest = 1;
    repeated Annotation annotations = 2;
}

message Manifest {
    Tree root = 1;
    repeated Tree trees = 2;
}

message Annotation {
    string key = 1;
    oneof value {
        string data = 2;
        Digest digest = 3;
    }
}

message Tree {
    repeated Entry entries = 1;
}

message Entry {
    Digest object = 1;
    EntryKind kind = 2;
    uint32 mode = 3;
    uint64 size = 4;
    string name = 5;
}

enum EntryKind {
    TREE = 0;
    BLOB = 1;
    MASK = 2;
}

message Blob {
    Digest payload = 1;
    uint64 size = 2;
}
